# Carla_RL

./: .actrc  .actrc.example  .gitignore  .pre-commit-config.yaml  AUDIT_version-updates-verify.md  Makefile  README.md  RELEASE_CHANGELOG.md  pyproject.toml  test-pr-quality-local.sh
.cursor/rules/: create-prd.mdc  generate-tasks.mdc  github-workflow-sop.mdc  process-task-list.mdc  release-workflow.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh  smoke_tf221.py
.github/: BRANCH_PROTECTION.md  REQUIRED_STATUS_CHECKS.md  UPGRADE_TRACKER.md
.github/act/: event-pull-request.json
.github/scripts/: act-all.sh
.github/workflow-rules/: create-prd.mdc  generate-tasks.mdc  github-workflow-sop.mdc  no-emojis.mdc  process-task-list.mdc  release-workflow.mdc
.github/workflows/: README.md  branch-validation.yml  ci-checks.yml  feature-release-artifact.yml  merge-validation.yml  ml-pipeline-trigger.yml  performance-regression-test.yml  pr-checks.yml  security-scan.yml
carla-rl-serving/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
carla-rl-serving/scripts/: create_example_artifacts.py
carla-rl-serving/src/: io_schemas.py  preprocessing.py  server.py
carla-rl-serving/tests/: test_api_endpoints.py  test_inference.py  test_inference_qa.py  test_integration.py  test_preprocessing.py  test_schemas.py
evaluation/highway/: evaluate_models.py
model-serving/: BENCHMARKING_GUIDE.md  Dockerfile  HARDWARE_OPTIMIZATION_SUMMARY.md  LICENSE  Makefile  Makefile.test  README.md  create_simple_artifacts.py  entrypoint.sh  pyproject.toml  requirements.txt
model-serving/artifacts/: README.md
model-serving/artifacts/v0.1.0/: model.pt  model_card.yaml
model-serving/config/: performance-thresholds.yaml
model-serving/deploy/: README.md  docker-compose.monitoring.yml
model-serving/deploy/alertmanager/: alertmanager.yml
model-serving/deploy/docker/: docker-compose.test.yml  load_test.sh
model-serving/deploy/grafana/: carla-rl-dashboard.json
model-serving/deploy/k8s/: deployment.yaml  test-deployment.yaml
model-serving/deploy/prometheus/: carla_rl_alerts.yml  prometheus.yml
model-serving/deploy/scripts/: setup_monitoring.sh  test_docker_compose.sh
model-serving/docs/: configuration-reference.md  monitoring-guide.md  performance-tuning.md  testing-guide.md
model-serving/docs/ci-cd/: ci-cd-integration.md
model-serving/docs/deployment-guides/: bare-metal-deployment.md  docker-deployment.md  kubernetes-deployment.md  mac-m4-max-deployment.md
model-serving/docs/monitoring/: monitoring-setup.md
model-serving/docs/performance-tuning/: performance-tuning.md
model-serving/docs/troubleshooting/: troubleshooting.md
model-serving/scripts/: analyze_benchmarks.py  cluster_validation.py  collect_system_info.py  config_manager.py  content_storage_manager.py  create_example_artifacts.py  environment_aware_performance_test.py  integrity_reporter.py  local_benchmark.py  log_analyzer.py  manage_artifacts.py  migration_manager.py  optimization_manager.py  optimize_performance.py  performance_regression_test.py  rollback_manager.py  run_benchmarks.py  run_deployment_tests.py  run_full_benchmark_suite.sh  setup_benchmarking.sh  setup_minimal.sh  test_cluster.sh  test_docker_compose.py  test_kubernetes.py  test_optimizations_minimal.py  throughput_monitor.py  validate_artifacts.py  validate_latency_requirements.py  validate_optimizations.py  version_manager.py
model-serving/src/: exceptions.py  inference.py  io_schemas.py  model_loader.py  preprocessing.py  server.py  version.py
model-serving/src/benchmarking/: __init__.py  benchmark.py  hardware_detector.py  performance_validator.py
model-serving/src/config/: __init__.py  diff.py  hot_reload.py  loader.py  profiles.py  schema.py  settings.py  templates.py  validation.py
model-serving/src/monitoring/: __init__.py  health.py  log_aggregation.py  logging.py  metrics.py  tracing.py
model-serving/src/optimization/: __init__.py  cpu_optimizer.py  gpu_optimizer.py  memory_optimizer.py  optimization_manager.py
model-serving/src/versioning/: __init__.py  artifact_manager.py  content_storage.py  integrity_validator.py  migration_manager.py  model_loader_integration.py  rollback_manager.py  semantic_version.py  version_selector.py
model-serving/tests/: conftest.py  test_api_endpoints.py  test_exceptions.py  test_inference.py  test_inference_qa.py  test_integration.py  test_model_loader.py  test_model_management_qa.py  test_preprocessing.py  test_qa_plan.py  test_schemas.py
model-serving/tests/benchmarking/: __init__.py  test_benchmark.py  test_hardware_detector.py
model-serving/tests/config/: __init__.py  test_loader.py  test_settings.py  test_validation.py
model-serving/tests/integration/: test_deployment.py
model-serving/tests/monitoring/: test_logging.py  test_metrics.py
model-serving/tests/optimization/: __init__.py  test_cpu_optimizer.py  test_gpu_optimizer.py  test_memory_optimizer.py  test_optimization_manager.py  test_performance_validation.py
model-serving/tests/versioning/: __init__.py  test_artifact_manager.py  test_content_storage.py  test_integrity_reporter.py  test_integrity_validator.py  test_migration_manager.py  test_rollback_manager.py  test_semantic_version.py  test_validate_artifacts_cli.py  test_version_selector.py  test_version_selector.py.backup
model-sim/: Makefile  README.md  pyproject.toml
model-sim/evaluation/highway/: evaluate_models.py
model-sim/scripts/: benchmark.py  setup_platform.py  train.py
model-sim/src/highway_rl/: agent.py  environment.py  logger.py  trainer.py
model-sim/tests/: test_cross_platform.py
model-sim/tests/benchmarks/: benchmark_modern_stack.py
model-sim/tests/evaluation/: performance_comparison.py  test_cross_platform.py
model-sim/tests/validation/: validate_setup.py
model-sim/training/highway/: train_highway.py
release-artifacts/: RELEASE_CHANGELOG.md
scripts/: benchmark.py
src/highway_rl/: __init__.py  (+2 more)
tasks/: tasks-phase1-improvements.md  tasks-prd-carla-rl-serving.md  tasks-prd-phase1-improvements.md
(+25 files in other folders)
