[project]
name = "carla-rl"
version = "0.1.0"
description = "Reinforcement Learning for Self-Driving using Carla"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "numpy",
  "tensorflow",
  "keras",
  "opencv-python",
  "psutil",
  "colorama"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
carla-train = "carla_rl.trainer:main"
carla-play = "carla_rl.play:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
