[project]
name = "highway-rl"
version = "0.1.0"
description = "Highway RL - Function-Driven Repository"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11+
target-version = "py311"

[tool.ruff.lint]
# Only enable the most critical rules - everything else is ignored
select = [
    "E9",      # pycodestyle errors (syntax errors, indentation)
    "F",       # pyflakes (undefined names, unused imports)
]

# Ignore everything else to avoid overwhelming output
ignore = [
    "E501",    # line too long
    "E203",    # whitespace before ':'
    "B008",    # do not perform function calls in argument defaults
    "B006",    # do not use mutable data structures for argument defaults
    "B904",    # raise exceptions with raise ... from err
    "N803",    # argument name should be lowercase
    "N815",    # variable in class scope should not be mixedCase
    "N818",    # exception name should be named with an Error suffix
    "F841",    # local variable assigned but never used
    "F401",    # imported but unused
    "E402",    # module level import not at top of file
    "E722",    # do not use bare except
    "W291",    # trailing whitespace
    "W293",    # blank line contains whitespace
    "B007",    # loop control variable not used within loop body
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["model_serving", "model_sim"]

[tool.ruff.lint.per-file-ignores]
"model-sim/**/*" = ["E402", "E722"]
