[project]
name = "highway-rl"
version = "0.1.0"
description = "Reinforcement Learning for Self-Driving using Highway environments"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "numpy>=1.21.0",
  "opencv-python>=4.5.0",
  "psutil>=5.8.0",
  "colorama>=0.4.4",
  "highway-env>=1.10.1",
  "gymnasium>=1.1.1",
  "wandb>=0.22.0",
  "tensorboard-plugin-wit>=1.8.1",
]

[project.optional-dependencies]
# Apple Silicon GPU acceleration
apple-gpu = [
  "tensorflow-macos>=2.14.0,<2.16.0",
  "tensorflow-metal>=1.2.0",
]
# NVIDIA GPU acceleration  
nvidia-gpu = [
  "tensorflow[and-cuda]>=2.14.0",
]
# Development tools
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
carla-train = "carla_rl.trainer:main"
carla-play = "carla_rl.play:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E9",      # pycodestyle errors (syntax errors, indentation)
    "F",       # pyflakes (undefined names, unused imports)
]
ignore = [
    "E501",    # line too long
    "E203",    # whitespace before ':'
    "B008",    # do not perform function calls in argument defaults
    "B006",    # do not use mutable data structures for argument defaults
    "B904",    # raise exceptions with raise ... from err
    "N803",    # argument name should be lowercase
    "N815",    # variable in class scope should not be mixedCase
    "N818",    # exception name should be named with an Error suffix
    "F841",    # local variable assigned but never used
    "F401",    # imported but unused
    "E402",    # module level import not at top of file
    "E722",    # do not use bare except
    "W291",    # trailing whitespace
    "W293",    # blank line contains whitespace
    "B007",    # loop control variable not used within loop body
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
