[project]
name = "highway-rl"
version = "0.1.0"
description = "Reinforcement Learning for Self-Driving using Highway environments"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
# TensorFlow 2.21 dropped Python 3.9 support, so the lower bound moves to 3.10.
requires-python = ">=3.10,<3.14"
dependencies = [
  "numpy>=1.26.0,<2.2",
  "opencv-python>=4.5.0",
  "psutil>=5.8.0",
  "colorama>=0.4.4",
  "highway-env>=1.10.1",
  "gymnasium>=1.1.1",
  "wandb>=0.22.0",
]

[project.optional-dependencies]
# Generic CPU / Apple Silicon install. The standalone ``tensorflow-macos`` +
# ``tensorflow-metal`` combo stopped receiving updates after TF 2.15.1, so the
# modern path on Apple Silicon is the plain ``tensorflow`` wheel built for
# macOS arm64 (no Metal GPU acceleration). Users who specifically need Metal
# GPU acceleration and are OK with TF 2.15 + Keras 2 should install
# ``tensorflow-macos<2.16 tensorflow-metal`` by hand instead of this extra.
apple-gpu = [
  "tensorflow>=2.21.0,<2.22",
]
# NVIDIA GPU acceleration (Linux).
nvidia-gpu = [
  "tensorflow[and-cuda]>=2.21.0,<2.22",
]
# Development tools
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-timeout>=2.2.0",
  "ruff>=0.1.8",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
carla-train = "carla_rl.trainer:main"
carla-play = "carla_rl.play:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E9",      # pycodestyle errors (syntax errors, indentation)
    "F",       # pyflakes (undefined names, unused imports)
]
ignore = [
    "E501",    # line too long
    "E203",    # whitespace before ':'
    "B008",    # do not perform function calls in argument defaults
    "B006",    # do not use mutable data structures for argument defaults
    "B904",    # raise exceptions with raise ... from err
    "N803",    # argument name should be lowercase
    "N815",    # variable in class scope should not be mixedCase
    "N818",    # exception name should be named with an Error suffix
    "F841",    # local variable assigned but never used
    "F401",    # imported but unused
    "E402",    # module level import not at top of file
    "E722",    # do not use bare except
    "W291",    # trailing whitespace
    "W293",    # blank line contains whitespace
    "B007",    # loop control variable not used within loop body
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
